--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "npm": "~5.x.x"
   },
   "scripts": {
-    "test": "NODE_ENV=test mocha --require babel-core/register --require spec/javascripts/spec_helper.js spec/javascripts/**/*.js"
+    "test": "NODE_ENV=test mocha --require babel-core/register --require spec/javascripts/spec_helper.js spec/javascripts/**/*.js",
+    "build": "true"
   },
   "dependencies": {
     "@rails/webpacker": "^3.2.2",
