--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -243,6 +243,15 @@ production:
       - 'http://localhost:9393/'
       - 'http://localhost:9393/auth/login-gov/callback'
 
+  'urn:gov:gsa:openidconnect:sp:gin':
+    agency: 'GSA'
+    cert: 'sp_gin_demo'
+    friendly_name: 'Example OIDC Client (Gin)'
+    logo: '18f.svg'
+    redirect_uris:
+      - 'http://localhost:8080/'
+      - 'http://localhost:8080/auth/login-gov/callback'
+
   # CBP Jobs
   'urn:gov:dhs.cbp.jobs:openidconnect:cert':
     agency_id: 1
