--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -72,7 +72,7 @@ development:
   available_locales: 'en es fr'
   aws_kms_key_id: 'alias/login-dot-gov-development-keymaker'
   aws_region: 'us-east-1'
-  aws_ses_region:
+  aws_ses_region_pool: '{ "us-west-2": 5, "us-east-1": 95 }'
   basic_auth_user_name: 'user'
   basic_auth_password: 'secret'
   dashboard_api_token: 'test_token'
@@ -169,7 +169,7 @@ production:
   available_locales: 'en es fr'
   aws_kms_key_id:
   aws_region:
-  aws_ses_region:
+  aws_ses_region_pool:
   basic_auth_user_name:
   basic_auth_password:
   disable_email_sending: 'false'
@@ -256,7 +256,7 @@ test:
   available_locales: 'en es fr'
   aws_kms_key_id: 'alias/login-dot-gov-test-keymaker'
   aws_region: 'us-east-1'
-  aws_ses_region:
+  aws_ses_region_pool: '{ "us-west-2": 5, "us-east-1": 95 }'
   basic_auth_user_name: 'user'
   basic_auth_password: 'secret'
   domain_name: 'www.example.com'
