Consider Puerto Rico numbers to be like US numbers
**Why**: When entering a PR number with US selected, the number
wouldn't validate.

**How**: Add PR as a country option for anyone looking for it, and
prepend `+1 ` to a number if it's not valid and the country is `US`.

--- a/config/country_dialing_codes.yml
+++ b/config/country_dialing_codes.yml
@@ -586,6 +586,10 @@ PL:
   name: Poland
   country_code: '48'
   sms_only: true
+PR:
+  name: Puerto Rico (U.S.)
+  country_code: '1'
+  sms_only: false
 PT:
   name: Portugal
   country_code: '351'
