--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -173,6 +173,14 @@ development:
       - 'http://localhost:8080/'
       - 'http://localhost:8080/auth/login-gov/callback'
 
+  'urn:gov:gsa:openidconnect:sp:phoenix':
+    agency: 'GSA'
+    cert: 'sp_phoenix_demo'
+    friendly_name: 'Example OIDC Client (Phoenix)'
+    logo: '18f.svg'
+    redirect_uris:
+      - 'http://localhost:4000/'
+
 production:
   'https://idp.dev.login.gov':
     metadata_url: 'https://idp.dev.login.gov/api/saml/metadata'
