--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,13 +11,14 @@ AllCops:
     - '**/Capfile'
   Exclude:
     - 'db/schema.rb'
-    - 'bin/**/*'
-    - 'config/initializers/devise.rb'
-    - 'db/migrate/*'
-    - 'spec/services/pii/nist_encryption_spec.rb'
+    - 'node_modules/**/*'
     - 'lib/rspec/user_flow_formatter.rb'
     - 'lib/user_flow_exporter.rb'
-    - 'node_modules/**/*'
+    - 'scripts/load_testing/*'
+    - 'spec/**/*'
+    - 'tmp/**/*'
+    - 'bin/**/*'
+    - 'db/migrate/*'
   TargetRubyVersion: 2.3
   TargetRailsVersion: 5.1
   UseCache: true
